--- a/profiles/the_provoker.html
+++ b/profiles/the_provoker.html
@@ -121,9 +121,7 @@
   <div class="quote">“I’m not starting anything... unless you’re ready to finish it.”</div>
 
   <div class="description">
-    You’re a walking dare. You provoke, poke, and play—just to see what comes out. 
-    Your power lies in disruption, and your seduction comes from your ability to stir something deep, maybe even dangerous. 
-    You don’t just want attention—you want a reaction. If they can’t handle the fire, you’ll gladly fan the flames.
+    You poke, provoke, and press all the right buttons. It's effortless for you to flip the switch and flip the room. You don't get swayed by other emotions, you set the mood. In power-exchange theory, you’re a dominant-leaning switch, meaning you aren't reactive, you take the initiative. People don’t play games with you unless they're playing your game. 
   </div>
 
   <a href="/archetype-gallery.html" class="view-all-button">View All Sexual Profiles</a>
