--- a/profiles/dungeon_master.html
+++ b/profiles/dungeon_master.html
@@ -121,10 +121,7 @@
   <div class="quote">“Consent is the real safeword. After that, the world is yours.”</div>
 
   <div class="description">
-    You’re not afraid to take control—because you’ve earned it. 
-    You’re grounded, skilled, and experienced enough to know that true dominance requires as much care as command. 
-    People trust you with their fantasies because you hold their boundaries with precision. 
-    You’re the orchestrator of intensity, guiding others into deeper realms of power, surrender, and pleasure.
+  You don’t play a dominant. You are one. Control isn’t a tool, it’s your second language. You lead with clarity and expectation. Others surrender to you not because they must, but because they want to. Kink researchers define this as total power exchange, you don’t need try and take control. You already have it.
   </div>
 
   <a href="/archetype-gallery.html" class="view-all-button">View All Sexual Profiles</a>
