--- a/profiles/mood_multiplier.html
+++ b/profiles/mood_multiplier.html
@@ -118,7 +118,7 @@
     </div>
   </div>
 
-  <div class="quote">“The most seductive thing you can do is mirror their desire—then amplify it.”</div>
+  <div class="quote">“I don’t adapt to people. I evolve with them.” – Anonymous</div>
 
   <div class="description">
    You don’t lead or follow, you co-create. Your sexual style is responsive, intuitive, and emotionally intelligent. Like a mirror that amplifies light, you reflect and enhance what others bring. This is a classic example of responsive desire, you don’t act until you feel something real. And when you do, you bring it hard.
