--- a/profiles/heatwave.html
+++ b/profiles/heatwave.html
@@ -144,7 +144,7 @@
     </div>
   </div>
 
-  <div class="quote">"I don’t just bring the heat. I *am* the temperature."</div>
+  <div class="quote">“Maybe people think I look sexy because I feel sexy… If you’re comfortable with yourself, then it’s sexy.” - Scarlett Johansson</div>
 
   <div class="description">
     You don’t just walk into a room, you tilt its emotional climate. You know what you want and how to get it, without ever needing to say it out loud. Psychology calls this “initiating desire” because you’re the one who ignites the spark. Whether you lead or tease, you’re always in tune with your own power.
