--- a/profiles/promiscuous_plaything.html
+++ b/profiles/promiscuous_plaything.html
@@ -118,7 +118,7 @@
     </div>
   </div>
 
-  <div class="quote">“I’m not here to be tamed—I’m here to be enjoyed.”</div>
+  <div class="quote">"Sex is part of nature. I go along with nature." – Marilyn Monroe</div>
 
   <div class="description">
     You’re here for the spark, the chase, the shiver that runs down your spine when someone wants you. You crave sensation and emotional thrill, but only when it feels real. Psychologists call this “exploratory submission,” where openness fuels arousal. You’re not just a plaything, you’re the prize.
