--- a/profiles/bedroom_adventurer.html
+++ b/profiles/bedroom_adventurer.html
@@ -118,7 +118,7 @@
     </div>
   </div>
 
-  <div class="quote">“The only real voyage of discovery consists not in seeking new landscapes, but in having new eyes.” – Proust</div>
+  <div class="quote">“New cities, new positions, same safe word.” - Anonymous</div>
 
   <div class="description">
   You crave novelty. You like to stir things up and test the edges. You’re turned on by the idea that anything could happen and you might be the one to make it happen. Research shows that eroticism thrives on psychological novelty. You’re not looking to disrupt, you’re looking to discover.
