--- a/profiles/charmer_in_charge.html
+++ b/profiles/charmer_in_charge.html
@@ -118,7 +118,7 @@
     </div>
   </div>
 
-  <div class="quote">“Seduction is about intelligence and wit. Someone who makes me laugh has every chance to seduce me.” – Ricci</div>
+  <div class="quote">“Power isn’t taken. It’s given—willingly.” – Toni Morrison</div>
 
   <div class="description">
 You don’t dominate with force, you dominate with allure. You lead with confidence and draw people in with magnetic energy. You’re the person they don’t want to disobey, not out of fear, but fascination. Dominance researchers call this persuasive power, it’s less about pushing and more about pull.
