--- a/profiles/claimed_and_trained.html
+++ b/profiles/claimed_and_trained.html
@@ -118,7 +118,7 @@
     </div>
   </div>
 
-  <div class="quote">“Obedience is not weakness. It’s a decision to trust someone with your pleasure.”</div>
+  <div class="quote">"The harder the mindfucking the better." - Anonymous</div>
 
   <div class="description">
    You don’t want to just submit, you want to surrender completely. You want to be dominated by someone you can't resist. Commands don’t restrict you; they turn you on. Submission, for you, is an erotic identity, not a mere role. Psychologists call this identity-congruent kink, when obedience isn’t just hot, it fits just right.
