--- a/profiles/the_punish_me.html
+++ b/profiles/the_punish_me.html
@@ -118,7 +118,7 @@
     </div>
   </div>
 
-  <div class="quote">“Tell me I’m wrong one more time.” —You, right before it gets good</div>
+  <div class="quote">"I may misbehave, but only to see if you're strong enough to put me in my place." Anonymous</div>
 
   <div class="description">
    You test limits, not to break them, but to find out who’s strong enough to handle your full intensity. You thrive on dynamic power play. Research in kink psychology shows that bratting is often a form of intimacy-seeking resistance, you push to see who can truly push back. Your defiance is a dare. You're looking for someone who's strong enough to handle your intensity and put you back in your place. 
