--- a/profiles/the_provoker.html
+++ b/profiles/the_provoker.html
@@ -118,7 +118,7 @@
     </div>
   </div>
 
-  <div class="quote">“I’m not starting anything... unless you’re ready to finish it.”</div>
+  <div class="quote">"It is not by obeying the rules that we come to know pleasure, but by breaking them." – Anaïs Nin</div>
 
   <div class="description">
     You poke, provoke, and press all the right buttons. It's effortless for you to flip the switch and flip the room. You don't get swayed by other emotions, you set the mood. In power-exchange theory, you’re a dominant-leaning switch, meaning you aren't reactive, you take the initiative. People don’t play games with you unless they're playing your game. 
