--- a/profiles/dungeon_master.html
+++ b/profiles/dungeon_master.html
@@ -118,7 +118,7 @@
     </div>
   </div>
 
-  <div class="quote">“Consent is the real safeword. After that, the world is yours.”</div>
+  <div class="quote">"Everything is about sex except sex. Sex is about power." - Anonymous</div>
 
   <div class="description">
   You don’t play a dominant. You are one. Control isn’t a tool, it’s your second language. You lead with clarity and expectation. Others surrender to you not because they must, but because they want to. Kink researchers define this as total power exchange, you don’t need try and take control. You already have it.
