--- a/profiles/tender_protector.html
+++ b/profiles/tender_protector.html
@@ -99,7 +99,7 @@
     </div>
   </div>
 
-  <div class="quote">“The strongest love is the love that can demonstrate its fragility.” – Paulo Coelho</div>
+  <div class="quote">“Did you bring protection? Don’t worry, I came prepared.” - Anoymous</div>
 
   <div class="description">
     You lead with grace, grounding those around you. You’re the kind of partner others surrender to not out of fear, but trust. You’re not just in charge, you’re responsible. When you lead, people feel held, not handled. In dominance psychology, this is called secure authority, you don’t control people, you create space for them to feel free.
