--- a/profiles/generous_giver.html
+++ b/profiles/generous_giver.html
@@ -118,7 +118,7 @@
     </div>
   </div>
 
-  <div class="quote">“Pleasure is the measure of connection.” – Esther Perel</div>
+  <div class="quote">“Love has nothing to do with what you are expecting to get—only with what you are expecting to give—which is everything.” - Katherine Hepburn</div>
 
   <div class="description">
    You feel most alive when you’re tuning into someone else. Giving isn’t a performance, it’s a connection ritual. Whether you’re leading or letting go, your goal is reciprocity. This is a textbook case of mutual responsive intimacy, a flexible erotic role based on emotional availability, not control. 
