--- a/Result.html
+++ b/Result.html
@@ -177,7 +177,7 @@
           box-shadow: 0 0 8px rgba(255, 215, 0, 0.6);
         ">
       </a>
-      <div class="profile-caption">Tap to reveal your full sexual profile</div>
+      <div class="profile-caption">Tap image to reveal your full sexual profile</div>
     `;
 
     const matches = {
